<resources>
    <string name="app_name">ToDo It</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tasks_enjoy_your_time">No Tasks, Enjoy Your Time</string>
    <string name="image_when_there_is_no_tasks">image when there is no tasks</string>
    <string name="icon_in_flaating_action_botton">icon in flaating action botton</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="study_title_test">Study</string>
    <string name="description_test">- Math \n- analysis \n- software</string>
    <string name="search_menu">search</string>
    <string name="high_priority_menu">High Priority</string>
    <string name="low_priority_menu">Low Priority</string>
    <string name="delete_all_menu">Delete All</string>
    <string name="sort_by_menu">Sort By</string>
    <string name="add_todo_menu">Add Todo</string>
    <string name="save_todo_menu">Save Todo</string>
    <string name="todo_title_row">Todo Title</string>
    <string name="todo_description_row">todo description</string>
    <string name="delete_todo_update">Delete</string>
    <string name="theme_menu">theme</string>
    <string name="share_menu">Share</string>
    <string name="rate_menu">Rate</string>
    <string name="review_menu">Review</string>
    <string name="our_apps_menu">Our Apps</string>
    <string name="about_menu">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="about_dialog">About</string>
    <string name="todo_it_dialog">Todo It</string>
    <string name="version_1_0_0_dialog">Version: 1.0.0</string>
    <string name="developed_by_seif_mohamed_dialog">Developed by: Seif Mohamed</string>
    <string name="ok_about_dialog">OK</string>
    <string name="todo_image_desc">header image</string>
    <string name="share_menu_todo">Share</string>
    <string name="imgae_for_splash_screen">imgae for splash screen</string>
    <string name="software_inversion_about">Software Inversion</string>
    <string name="nav_image_header">nav_image_header</string>


    <string name="banner_home_ad">ca-app-pub-9282344972847669/1945714900</string>
    <string name="interstitial_ad">ca-app-pub-9282344972847669/4498698384</string>

    <string-array name="spinner_items">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>