<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/menu_search"
    android:title="@string/search_menu"
    android:icon="@drawable/ic_search"
    app:showAsAction="ifRoom"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    >
</item>
    <group android:checkableBehavior="single">
    <item android:id="@+id/menu_sort_by"
        android:title="@string/sort_by_menu">
        <menu>
            <item
                android:id="@+id/menu_priority_high"
                android:title="@string/high_priority_menu" />
            <item
                android:id="@+id/menu_priority_low"
                android:title="@string/low_priority_menu" />
        </menu>
    </item>
        <item
            android:id="@+id/menu_delete_all"
            android:title="@string/delete_all_menu" />
    </group>
</menu>